--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "antd": "^5.13.2",
     "axios": "^1.6.5",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-share": "^5.0.3",
     "sass": "^1.70.0",
     "wavesurfer.js": "^7.6.5",
     "web-vitals": "^2.1.4"
