--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.13.2",
     "axios": "^1.6.5",
+    "localtunnel": "^2.0.2",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
@@ -23,11 +24,13 @@
     "react-scripts": "5.0.1",
     "react-share": "^5.0.3",
     "sass": "^1.70.0",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.3",
     "wavesurfer.js": "^7.6.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=999 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
